--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  NGINX Extras is <a href="https://www.getpagespeed.com/repo-subscribe"><em>subscription-ware</em></a> by GetPageSpeed, allowing your server to be secure and fast.
+  NGINX Extras is <a href="https://www.getpagespeed.com/repo-subscribe" target="_blank"><em>subscription-ware</em></a> by GetPageSpeed, allowing your server to be secure and fast.
 {% endblock %}
